--- a/style.css
+++ b/style.css
@@ -94,3 +94,35 @@ nav {
   color: #fff;
   font-size: 15px;
 }
+.nav-bottom div {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-weight: 500;
+}
+/* header slider section */
+.header-slider ul {
+  display: flex;
+  overflow-y: hidden;
+}
+.header-img {
+  max-width: 100%;
+  mask-image: linear-gradient(to bottom, #000000 50%, trensparent 100%);
+}
+/* image control icon */
+.header-slider a {
+  position: absolute;
+  top: 30%;
+  z-index: 1;
+  padding: 5vh 1vw;
+  background: #ffffff4f;
+  color: #0000007b;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+}
+/* control next icon */
+.control-next {
+  right: 0;
+}
