--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ nav {
   align-items: center;
   margin: 0px 15px;
 }
-/* nav bottom */
+/* nav bottom section */
 .nav-bottom {
   display: flex;
   align-items: center;
@@ -112,7 +112,7 @@ nav {
 /* image control icon */
 .header-slider a {
   position: absolute;
-  top: 30%;
+  top: 20%;
   z-index: 1;
   padding: 5vh 1vw;
   background: #ffffff4f;
